# h2o-3

h2o-algos/src/main/java/hex/: DataInfo.java
h2o-algos/src/main/java/hex/glrm/: GLRM.java  GLRMModel.java
h2o-algos/src/main/java/hex/tree/: DTree.java  TreeVisitor.java
h2o-algos/src/main/java/hex/tree/drf/: DRF.java
h2o-algos/src/main/java/hex/tree/gbm/: GBM.java
h2o-algos/src/main/java/hex/util/: LinearAlgebraUtils.java
h2o-algos/src/test/java/hex/tree/drf/: DRFTest.java
h2o-algos/src/test/java/hex/tree/gbm/: GBMTest.java
h2o-core/src/main/java/hex/: ModelMetrics.java
h2o-genmodel/src/main/cxx/: BinomialModelPrediction.cxx  CMakeLists.txt  EasyPredictModelWrapper.cxx  Makefile  MojoModel.cxx  RowData.cxx  example.cxx
h2o-genmodel/src/main/cxx/h2o/: BinomialModelPrediction.h  BufferedReader.h  DistributionFamily.h  EasyPredictModelWrapper.h  FolderMojoReaderBackend.h  GbmMojoModel.h  GbmMojoReader.h  GenModel.h  ModelCategory.h  ModelMojoFactory.h  ModelMojoReader.h  MojoModel.h  MojoReaderBackend.h  RowData.h  SharedTreeMojoModel.h  mojo.h  util.h
h2o-genmodel/src/main/java/hex/genmodel/algos/glrm/: GlrmLoss.java
h2o-genmodel/src/main/java/hex/genmodel/algos/tree/: SharedTreeMojoModel.java  SharedTreeNode.java  SharedTreeSubgraph.java
h2o-py/h2o/: frame.py
h2o-py/tests/testdir_algos/glrm/: pyunit_glrm_PUBDEV_3728_binary_numeric.py
h2o-r/h2o-package/R/: communication.R  frame.R  kvstore.R
h2o-r/tests/testdir_algos/glrm/: runit_glrm_PUBDEV_3788_loss_by_col_err.R
scripts/: run.py
